--- a/ESMF/Apps/aop_calculator.rc
+++ b/ESMF/Apps/aop_calculator.rc
@@ -54,7 +54,7 @@ DU:   ExtData/PIESA/x/optics_DU.v15_3.nc du001 du002 du003 du004 du005
 SS:   ExtData/PIESA/x/optics_SS.v3_3.nc  ss001 ss002 ss003 ss004 ss005
 SU:   ExtData/PIESA/x/optics_SU.v1_3.nc  so4
 NI:   ExtData/PIESA/x/optics_NI.v2_5.nc  no3an1 no3an2 no3an3 
-OC:   ExtData/PIESA/x/optics_OC.v1_3.nc  ocphilic ocphobic
-BR:   ExtData/PIESA/x/optics_BRC.v1_5.nc brcphilic brcphobic
-BC:   ExtData/PIESA/x/optics_BC.v1_3.nc  bcphilic bcphobic
+OC:   ExtData/PIESA/x/optics_OC.v1_3.nc  ocphobic ocphilic
+BR:   ExtData/PIESA/x/optics_BRC.v1_5.nc brcphobic brcphilic
+BC:   ExtData/PIESA/x/optics_BC.v1_3.nc  bcphobic bcphilic
 
