Add extra esmf dependencies to CMake

--- a/ESMF/Shared/CMakeLists.txt
+++ b/ESMF/Shared/CMakeLists.txt
@@ -4,9 +4,9 @@ set (srcs
   Chem_AeroGeneric.F90
   )
 
-esma_add_library(${this} 
-  SRCS ${srcs} 
-  DEPENDENCIES MAPL)
+esma_add_library(${this}
+  SRCS ${srcs}
+  DEPENDENCIES MAPL esmf)
 
 if( EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/@GSW )
     set (gsw_ECBUILD_SYSTEM_INCLUDED TRUE)
