--- a/ESMF/GOCART2G_GridComp/SU2G_GridComp/CMakeLists.txt
+++ b/ESMF/GOCART2G_GridComp/SU2G_GridComp/CMakeLists.txt
@@ -2,10 +2,10 @@ esma_set_this ()
 
 esma_add_library (${this}
   SRCS ${this}Mod.F90
-  DEPENDENCIES GA_Environment MAPL Chem_Shared2G Process_Library)
+  DEPENDENCIES GA_Environment MAPL Chem_Shared2G Process_Library esmf)
 
-mapl_acg (${this}   SU2G_StateSpecs.rc 
-          IMPORT_SPECS EXPORT_SPECS INTERNAL_SPECS 
+mapl_acg (${this}   SU2G_StateSpecs.rc
+          IMPORT_SPECS EXPORT_SPECS INTERNAL_SPECS
           GET_POINTERS DECLARE_POINTERS)
 
 file (GLOB_RECURSE rc_files CONFIGURE_DEPENDS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.rc *.yaml)
