--- a/ESMF/GOCART_GridComp/BC_GridComp/R21C/BC_GridComp_ExtData.rc
+++ b/ESMF/GOCART_GridComp/BC_GridComp/R21C/BC_GridComp_ExtData.rc
@@ -16,6 +16,9 @@ BC_ANTEBC2 NA  N Y %y4-%m2-%d2t12:00:00 none none bc_energy    ExtData/chemistry
 # EDGAR based ship emissions
 BC_SHIP    NA  N Y %y4-%m2-%d2t12:00:00 none none bc_shipping  ExtData/chemistry/CEDS/v2021-04-21/sfc/BC-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4
 
+# Aircraft fuel consumption
+BC_AIRCRAFT NA  N Y %y4-%m2-%d2t12:00:00 none none bc_aviation ExtData/chemistry/CEDS/v2021-04-21/L72/BC-em-AIR-anthro_input4MIPs_emissions_CMIP_CEDS-2021-04-21_gn__aviation.x576_y361_z72_t12.%y4.nc4
+
 # Aviation emissions during the LTO, SDC and CRS phases of flight
 BC_AVIATION_LTO NA  Y Y %y4-%m2-%d2t12:00:00 none none bc_aviation ExtData/PIESA/sfc/HTAP/v2.2/htap-v2.2.emis_bc.aviation_lto.x3600_y1800_t12.2010.nc4
 BC_AVIATION_CDS NA  Y Y %y4-%m2-%d2t12:00:00 none none bc_aviation ExtData/PIESA/sfc/HTAP/v2.2/htap-v2.2.emis_bc.aviation_cds.x3600_y1800_t12.2010.nc4
