--- a/ESMF/GOCART_GridComp/OC_GridComp/GEOSIT/OC_GridComp_ExtData.rc
+++ b/ESMF/GOCART_GridComp/OC_GridComp/GEOSIT/OC_GridComp_ExtData.rc
@@ -19,6 +19,9 @@ OC_ANTEOC2 NA  N Y %y4-%m2-%d2t12:00:00 none none oc_energy    ExtData/chemistry
 # EDGAR based ship emissions
 OC_SHIP    NA  N Y %y4-%m2-%d2t12:00:00 none none oc_shipping  ExtData/chemistry/CEDS/v2021-04-21/sfc/OC-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4
 
+# Aircraft fuel consumption
+OC_AIRCRAFT NA  N Y %y4-%m2-%d2t12:00:00 none none oc_aviation ExtData/chemistry/CEDS/v2021-04-21/L72/OC-em-AIR-anthro_input4MIPs_emissions_CMIP_CEDS-2021-04-21_gn__aviation.x576_y361_z72_t12.%y4.nc4
+
 # Aviation emissions during the three phases of flight
 OC_AVIATION_LTO NA  Y Y %y4-%m2-%d2t12:00:00 none none oc_aviation ExtData/PIESA/sfc/HTAP/v2.2/htap-v2.2.emis_oc.aviation_lto.x3600_y1800_t12.2010.nc4
 OC_AVIATION_CDS NA  Y Y %y4-%m2-%d2t12:00:00 none none oc_aviation ExtData/PIESA/sfc/HTAP/v2.2/htap-v2.2.emis_oc.aviation_cds.x3600_y1800_t12.2010.nc4
