--- a/ESMF/GOCART_GridComp/SU_GridComp/R21C/SU_GridComp_ExtData.rc
+++ b/ESMF/GOCART_GridComp/SU_GridComp/R21C/SU_GridComp_ExtData.rc
@@ -15,7 +15,7 @@ SU_SHIPSO2    NA  N Y %y4-%m2-%d2t12:00:00 none none so2_shipping ExtData/chemis
 SU_SHIPSO4    NA  N Y %y4-%m2-%d2t12:00:00 none none so4_shipping ExtData/chemistry/CEDS/v2021-04-21/sfc/SO4-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4
 
 # Aircraft fuel consumption
-SU_AIRCRAFT NA  Y Y %y4-%m2-%d2t12:00:00 none none none /dev/null
+SU_AIRCRAFT NA  N Y %y4-%m2-%d2t12:00:00 none none so2_aviation ExtData/chemistry/CEDS/v2021-04-21/L72/SO2-em-AIR-anthro_input4MIPs_emissions_CMIP_CEDS-2021-04-21_gn__aviation.x576_y361_z72_t12.%y4.nc4
 
 # DMS concentration
 SU_DMSO NA  Y Y %y4-%m2-%d2t12:00:00 none none conc ExtData/MERRA2/sfc/DMSclim_sfcconcentration.x360_y181_t12.Lana2011.nc4
