--- a/ESMF/GOCART_GridComp/SU_GridComp/GEOSIT/19600101-20000331/SU_GridComp_ExtData.rc
+++ b/ESMF/GOCART_GridComp/SU_GridComp/GEOSIT/19600101-20000331/SU_GridComp_ExtData.rc
@@ -4,7 +4,6 @@ PrimaryExports%%
 #  Name        | Units | Clim  | Method |     Time Template    | Factor | Factor |     File    | Template |
 # -------------|-------|-------|--------|----------------------|--------|--------|-------------|----------|
 # Biomass burning -- QFED-v2.x
-#SU_BIOMASS NA  N Y %y4-%m2-%d2t12:00:00 none none biomass ExtData/chemistry/QFED/v2.5r1/sfc/0.1/Y%y4/M%m2/qfed2.emis_so2.006.%y4%m2%d2.nc4
 SU_BIOMASS NA  N Y %y4-%m2-%d2t12:00:00 none none biomass ExtData/chemistry/HFED/v1.0/Y%y4/hfed.emis_so2.x576_y361_t14.%y4.nc4
 
 # Anthropogenic (BF & FF) emissions -- allowed to input as two layers
@@ -16,7 +15,7 @@ SU_SHIPSO2    NA  N Y %y4-%m2-%d2t12:00:00 none none so2_shipping ExtData/chemis
 SU_SHIPSO4    NA  N Y %y4-%m2-%d2t12:00:00 none none so4_shipping ExtData/chemistry/CEDS/v2021-04-21/sfc/SO4-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4
 
 # Aircraft fuel consumption
-SU_AIRCRAFT NA  Y Y %y4-%m2-%d2t12:00:00 none none none /dev/null
+SU_AIRCRAFT NA  N Y %y4-%m2-%d2t12:00:00 none none so2_aviation ExtData/chemistry/CEDS/v2021-04-21/L72/SO2-em-AIR-anthro_input4MIPs_emissions_CMIP_CEDS-2021-04-21_gn__aviation.x576_y361_z72_t12.%y4.nc4
 
 # DMS concentration
 SU_DMSO NA  Y Y %y4-%m2-%d2t12:00:00 none none conc ExtData/MERRA2/sfc/DMSclim_sfcconcentration.x360_y181_t12.Lana2011.nc4
