more fixed to GOCART emissions for GEOSIT and R21C

--- a/ESMF/GOCART_GridComp/OC_GridComp/GEOSIT/19600101-20000331/OC_GridComp_ExtData.rc
+++ b/ESMF/GOCART_GridComp/OC_GridComp/GEOSIT/19600101-20000331/OC_GridComp_ExtData.rc
@@ -4,7 +4,7 @@ PrimaryExports%%
 #  Name        | Units | Clim  | Method |     Time Template    | Factor | Factor |     File    | Template |
 # -------------|-------|-------|--------|----------------------|--------|--------|-------------|----------|
 # Biomass burning -- QFED-v2.x
-OC_BIOMASS NA  N Y %y4-%m2-%d2t12:00:00 none none biomass ExtData/chemistry/QFED/v2.6r1/sfc/0.1/Y%y4/M%m2/qfed2.emis_oc.061.%y4%m2%d2.nc4
+OC_BIOMASS NA  N Y %y4-%m2-%d2t12:00:00 none none biomass ExtData/chemistry/HFED/v1.0/Y%y4/hfed.emis_oc.x576_y361_t14.%y4.nc4
 
 # Terpene emission
 OC_TERPENE NA  Y Y %y4-%m2-%d2t12:00:00 none none terpene ExtData/PIESA/sfc/geia.terpene_biogenic.x144_y91_t12.1971.nc
