Changed the restart option of spatially distributed internal fields that are not part of the original list of internal fields to MAPL_RestartSkip to esnure zero-diff with stock

--- a/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_StateSpecs.rc
@@ -76,8 +76,8 @@ category: INTERNAL
 #----------------------------------------------------------------------------------------
   NAME | UNITS | DIMS | VLOC | UNGRIDDED | RESTART | ADD2EXPORT | FRIENDLYTO | LONG NAME
 #----------------------------------------------------------------------------------------
- SS    |kg kg-1| xyz  | C    | self%nbins | MAPL_RestartOptional | T | DYNAMICS:TURBULENCE:MOIST | Sea Salt Mixing Ratio (bin %d)
- DEEP_LAKES_MASK |   1   | xy   | N    |            |                      | F |                           | Deep Lakes Mask
+ SS              |kg kg-1| xyz  | C    | self%nbins | MAPL_RestartOptional | T | DYNAMICS:TURBULENCE:MOIST | Sea Salt Mixing Ratio (bin %d)
+ DEEP_LAKES_MASK |   1   | xy   | N    |            | MAPL_RestartSkip     | F |                           | Deep Lakes Mask
 
 #********************************************************
 #
