--- a/ESMF/GOCART2G_GridComp/NI2G_GridComp/NI2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/NI2G_GridComp/NI2G_StateSpecs.rc
@@ -107,7 +107,7 @@ category: INTERNAL
  NO3an1 |kg kg-1   | xyz  | C    | MAPL_RestartOptional | T | DYNAMICS:TURBULENCE:MOIST | Nitrate size bin 001
  NO3an2 |kg kg-1   | xyz  | C    | MAPL_RestartOptional | T | DYNAMICS:TURBULENCE:MOIST | Nitrate size bin 002
  NO3an3 |kg kg-1   | xyz  | C    | MAPL_RestartOptional | T | DYNAMICS:TURBULENCE:MOIST | Nitrate size bin 003
- XHNO3  |kg m-2 s-1| xyz  | C    | MAPL_RestartOptional | F |                           | buffer for NITRATE_HNO3
+ XHNO3  |kg m-2 s-1| xyz  | C    | MAPL_RestartSkip | F |                           | buffer for NITRATE_HNO3
 
 #********************************************************
 #
