build GOCART2G components as shared libs

--- a/ESMF/GOCART2G_GridComp/CMakeLists.txt
+++ b/ESMF/GOCART2G_GridComp/CMakeLists.txt
@@ -1,13 +1,11 @@
 esma_set_this ()
 
-set (alldirs
-  GA_Environment
-  DU2G_GridComp
-  SS2G_GridComp
-  CA2G_GridComp
-  NI2G_GridComp
-  SU2G_GridComp
-  )
+add_subdirectory (GA_Environment)
+add_subdirectory (DU2G_GridComp)
+add_subdirectory (SS2G_GridComp)
+add_subdirectory (CA2G_GridComp
+add_subdirectory (NI2G_GridComp
+add_subdirectory (SU2G_GridComp
 
 set (srcs
   GOCART2G_GridCompMod.F90
@@ -24,7 +22,6 @@ install( FILES ${resource_files}
 set (dependencies MAPL Chem_Shared2G Process_Library esmf)
 esma_add_library (${this}
   SRCS ${srcs}
-  SUBCOMPONENTS ${alldirs}
   DEPENDENCIES ${dependencies}
   )
 
