--- a/ESMF/GOCART2G_GridComp/GA_Environment/CMakeLists.txt
+++ b/ESMF/GOCART2G_GridComp/GA_Environment/CMakeLists.txt
@@ -3,4 +3,5 @@ esma_set_this ()
 esma_add_library (${this}
   SRCS ${this}Mod.F90
   DEPENDENCIES MAPL Chem_Shared2G Process_Library esmf
+  TYPE SHARED
   )
