--- a/ESMF/GOCART2G_GridComp/SS2G_GridComp/CMakeLists.txt
+++ b/ESMF/GOCART2G_GridComp/SS2G_GridComp/CMakeLists.txt
@@ -2,7 +2,8 @@ esma_set_this ()
 
 esma_add_library (${this}
   SRCS ${this}Mod.F90
-  DEPENDENCIES MAPL GA_Environment Chem_Shared2G Process_Library esmf NetCDF::NetCDF_Fortran)
+  DEPENDENCIES MAPL GA_Environment Chem_Shared2G Process_Library esmf NetCDF::NetCDF_Fortran
+  TYPE SHARED)
 
 mapl_acg (${this}   SS2G_StateSpecs.rc 
           IMPORT_SPECS EXPORT_SPECS INTERNAL_SPECS 
