--- a/ESMF/GOCART2G_GridComp/GOCART2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/GOCART2G_StateSpecs.rc
@@ -28,6 +28,7 @@ category: EXPORT
  TOTSCATFM  | 1          | xy   | N    | size(self%wavelengths_vertint) | Total Aerosol Extinction AOT [550 nm] - PM1.0
  TOTANGSTR  | 1          | xy   | N    |            | Total Aerosol Angstrom parameter [470-870 nm]
  TOTEXTCOEF | m-1        | xyz  | C    | size(self%wavelengths_profile) | Total Aerosol Extinction coefficient
+ TOTSCACOEF | m-1        | xyz  | C    | size(self%wavelengths_profile) | Total Aerosol Scattering coefficient
  PM         | kg m-3     | xy   | N    |            | Total reconstructed PM
  PM_RH35    | kg m-3     | xy   | N    |            | Total reconstructed PM(RH=35%)
  PM_RH50    | kg m-3     | xy   | N    |            | Total reconstructed PM(RH=50%)
