--- a/ESMF/GOCART2G_GridComp/NI2G_GridComp/NI2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/NI2G_GridComp/NI2G_StateSpecs.rc
@@ -44,57 +44,59 @@ category: EXPORT
 #----------------------------------------------------------------------------------------
 #  VARIABLE              | DIMENSIONS |          Additional Metadata
 #----------------------------------------------------------------------------------------
- NAME        | UNITS        | DIMS  | VLOC  | UNGRIDDED                      | LONG NAME
+ NAME           | UNITS        | DIMS  | VLOC  | UNGRIDDED                      | LONG NAME
 #----------------------------------------------------------------------------------------
-  NH3MASS    | kg/kg        | xyz   | C     |                                | Ammonia Mass Mixing Ratio
-  NH4MASS    | kg/kg        | xyz   | C     |                                | Ammonium Aerosol Mass Mixing Ratio
-  NIMASS     | kg/kg        | xyz   | C     |                                | Nitrate Mass Mixing Ratio
-  NIMASS25   | kg/kg        | xyz   | C     |                                | Nitrate Mass Mixing Ratio [PM2.5]
-  HNO3CONC   | kg m-3       | xyz   | C     |                                | Nitric Acid Mass Concentration
-  NH3CONC    | kg m-3       | xyz   | C     |                                | Ammonia Mass Concentration
-  NH4CONC    | kg m-3       | xyz   | C     |                                | Ammonium Mass Concentration
-  NICONC     | kg m-3       | xyz   | C     |                                | Nitrate Mass Concentration
-  NICONC25   | kg m-3       | xyz   | C     |                                | Nitrate Mass Concentration [PM2.5]
-  NIEXTCOEF  | m-1          | xyz   | C     | size(self%wavelengths_profile) | Nitrate Extinction Coefficient
-  NISCACOEF  | m-1          | xyz   | C     | size(self%wavelengths_profile) | Nitrate Scattering Coefficient
-# .......... | ............ | ..... | ..... | ...........                    | ..................................
-  NIPNO3AQ   | kg m-2 s-1   | xy    | N     |                                | Nitrate Production from Aqueous Chemistry
-  NIPNH4AQ   | kg m-2 s-1   | xy    | N     |                                | Ammonium Production from Aqueous Chemistry
-  NIPNH3AQ   | kg m-2 s-1   | xy    | N     |                                | Ammonia Change from Aqueous Chemistry
-  NIHT       | kg m-2 s-1   | xy    | N     | 3                              | Nitrate Production from Het Chem (Bin %d)
-  NISD       | kg m-2 s-1   | xy    | N     | 3                              | Nitrate Sedimentation (Bin %d)
-  NIDP       | kg m-2 s-1   | xy    | N     | 3                              | Nitrate Dry Deposition (Bin %d)
-  NIWT       | kg m-2 s-1   | xy    | N     | 3                              | Nitrate Wet Deposition (Bin %d)
-  NISV       | kg m-2 s-1   | xy    | N     | 3                              | Nitrate Convective Scavenging (Bin %d)
-  NH3EM      | kg m-2 s-1   | xy    | N     |                                | Ammonia Emission
-  NH3DP      | kg m-2 s-1   | xy    | N     |                                | Ammonia Dry Deposition
-  NH3WT      | kg m-2 s-1   | xy    | N     |                                | Ammonia Wet Deposition
-  NH3SV      | kg m-2 s-1   | xy    | N     |                                | Ammonia Convective Scavenging
-  NH4SD      | kg m-2 s-1   | xy    | N     |                                | Ammonium Settling
-  NH4DP      | kg m-2 s-1   | xy    | N     |                                | Ammonium Dry Deposition
-  NH4WT      | kg m-2 s-1   | xy    | N     |                                | Ammonium Wet Deposition
-  NH4SV      | kg m-2 s-1   | xy    | N     |                                | Ammonium Convective Scavenging
-  HNO3SMASS  | kg m-3       | xy    | N     |                                | Nitric Acid Surface Mass Concentration
-  NH3SMASS   | kg m-3       | xy    | N     |                                | Ammonia Surface Mass Concentration
-  NH4SMASS   | kg m-3       | xy    | N     |                                | Ammonium Surface Mass Concentration
-  NISMASS    | kg m-3       | xy    | N     |                                | Nitrate Surface Mass Concentration
-  NISMASS25  | kg m-3       | xy    | N     |                                | Nitrate Surface Mass Concentration [PM2.5]
-  HNO3CMASS  | kg m-3       | xy    | N     |                                | Nitric Acid Column Mass Density
-  NH3CMASS   | kg m-3       | xy    | N     |                                | Ammonia Column Mass Density
-  NH4CMASS   | kg m-3       | xy    | N     |                                | Ammonium Column Mass Density
-  NICMASS    | kg m-2       | xy    | N     |                                | Nitrate Column Mass Density
-  NICMASS25  | kg m-2       | xy    | N     |                                | Nitrate Column Mass Density [PM2.5]
-  NIEXTTFM   | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Extinction AOT - PM 1.0 um
-  NISCATFM   | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Scattering AOT - PM 1.0 um
-  NIEXTT25   | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Extinction AOT - PM 2.5 um
-  NISCAT25   | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Scattering AOT - PM 2.5 um
-  NIEXTTAU   | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Extinction AOT
-  NISTEXTTAU | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Extinction AOT Stratosphere
-  NISCATAU   | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Scattering AOT
-  NISTSCATAU | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Scattering AOT Stratosphere
-  NIANGSTR   | 1            | xy    | N     |                                | Nitrate Angstrom parameter [470-870 nm]
-  NIFLUXU    | kg m-1 s-1   | xy    | N     |                                | Nitrate column u-wind mass flux
-  NIFLUXV    | kg m-1 s-1   | xy    | N     |                                | Nitrate column v-wind mass flux
+  NH3MASS       | kg/kg        | xyz   | C     |                                | Ammonia Mass Mixing Ratio
+  NH4MASS       | kg/kg        | xyz   | C     |                                | Ammonium Aerosol Mass Mixing Ratio
+  NIMASS        | kg/kg        | xyz   | C     |                                | Nitrate Mass Mixing Ratio
+  NIMASS25      | kg/kg        | xyz   | C     |                                | Nitrate Mass Mixing Ratio [PM2.5]
+  HNO3CONC      | kg m-3       | xyz   | C     |                                | Nitric Acid Mass Concentration
+  NH3CONC       | kg m-3       | xyz   | C     |                                | Ammonia Mass Concentration
+  NH4CONC       | kg m-3       | xyz   | C     |                                | Ammonium Mass Concentration
+  NICONC        | kg m-3       | xyz   | C     |                                | Nitrate Mass Concentration
+  NICONC25      | kg m-3       | xyz   | C     |                                | Nitrate Mass Concentration [PM2.5]
+  NIEXTCOEF     | m-1          | xyz   | C     | size(self%wavelengths_profile) | Nitrate Extinction Coefficient
+  NIEXTCOEFRH20 | m-1          | xyz   | C     | size(self%wavelengths_profile) | Nitrate Extinction Coefficient - fixed RH=20%
+  NIEXTCOEFRH80 | m-1          | xyz   | C     | size(self%wavelengths_profile) | Nitrate Extinction Coefficient - fixed RH=80%
+  NISCACOEF     | m-1          | xyz   | C     | size(self%wavelengths_profile) | Nitrate Scattering Coefficient
+# ............. | ............ | ..... | ..... | ...........                    | ..................................
+  NIPNO3AQ      | kg m-2 s-1   | xy    | N     |                                | Nitrate Production from Aqueous Chemistry
+  NIPNH4AQ      | kg m-2 s-1   | xy    | N     |                                | Ammonium Production from Aqueous Chemistry
+  NIPNH3AQ      | kg m-2 s-1   | xy    | N     |                                | Ammonia Change from Aqueous Chemistry
+  NIHT          | kg m-2 s-1   | xy    | N     | 3                              | Nitrate Production from Het Chem (Bin %d)
+  NISD          | kg m-2 s-1   | xy    | N     | 3                              | Nitrate Sedimentation (Bin %d)
+  NIDP          | kg m-2 s-1   | xy    | N     | 3                              | Nitrate Dry Deposition (Bin %d)
+  NIWT          | kg m-2 s-1   | xy    | N     | 3                              | Nitrate Wet Deposition (Bin %d)
+  NISV          | kg m-2 s-1   | xy    | N     | 3                              | Nitrate Convective Scavenging (Bin %d)
+  NH3EM         | kg m-2 s-1   | xy    | N     |                                | Ammonia Emission
+  NH3DP         | kg m-2 s-1   | xy    | N     |                                | Ammonia Dry Deposition
+  NH3WT         | kg m-2 s-1   | xy    | N     |                                | Ammonia Wet Deposition
+  NH3SV         | kg m-2 s-1   | xy    | N     |                                | Ammonia Convective Scavenging
+  NH4SD         | kg m-2 s-1   | xy    | N     |                                | Ammonium Settling
+  NH4DP         | kg m-2 s-1   | xy    | N     |                                | Ammonium Dry Deposition
+  NH4WT         | kg m-2 s-1   | xy    | N     |                                | Ammonium Wet Deposition
+  NH4SV         | kg m-2 s-1   | xy    | N     |                                | Ammonium Convective Scavenging
+  HNO3SMASS     | kg m-3       | xy    | N     |                                | Nitric Acid Surface Mass Concentration
+  NH3SMASS      | kg m-3       | xy    | N     |                                | Ammonia Surface Mass Concentration
+  NH4SMASS      | kg m-3       | xy    | N     |                                | Ammonium Surface Mass Concentration
+  NISMASS       | kg m-3       | xy    | N     |                                | Nitrate Surface Mass Concentration
+  NISMASS25     | kg m-3       | xy    | N     |                                | Nitrate Surface Mass Concentration [PM2.5]
+  HNO3CMASS     | kg m-3       | xy    | N     |                                | Nitric Acid Column Mass Density
+  NH3CMASS      | kg m-3       | xy    | N     |                                | Ammonia Column Mass Density
+  NH4CMASS      | kg m-3       | xy    | N     |                                | Ammonium Column Mass Density
+  NICMASS       | kg m-2       | xy    | N     |                                | Nitrate Column Mass Density
+  NICMASS25     | kg m-2       | xy    | N     |                                | Nitrate Column Mass Density [PM2.5]
+  NIEXTTFM      | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Extinction AOT - PM 1.0 um
+  NISCATFM      | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Scattering AOT - PM 1.0 um
+  NIEXTT25      | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Extinction AOT - PM 2.5 um
+  NISCAT25      | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Scattering AOT - PM 2.5 um
+  NIEXTTAU      | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Extinction AOT
+  NISTEXTTAU    | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Extinction AOT Stratosphere
+  NISCATAU      | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Scattering AOT
+  NISTSCATAU    | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Scattering AOT Stratosphere
+  NIANGSTR      | 1            | xy    | N     |                                | Nitrate Angstrom parameter [470-870 nm]
+  NIFLUXU       | kg m-1 s-1   | xy    | N     |                                | Nitrate column u-wind mass flux
+  NIFLUXV       | kg m-1 s-1   | xy    | N     |                                | Nitrate column v-wind mass flux
 
 category: INTERNAL
 #---------------------------------------------------------------------------------------------------------------
