--- a/ESMF/GOCART2G_GridComp/SU2G_GridComp/SU2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/SU2G_GridComp/SU2G_StateSpecs.rc
@@ -88,6 +88,8 @@ category: EXPORT
  SUEXTCOEFRH20 | m-1        | xyz  | C    | size(self%wavelengths_profile) | SO4 Extinction Coefficient - Fixed RH=20%
  SUEXTCOEFRH80 | m-1        | xyz  | C    | size(self%wavelengths_profile) | SO4 Extinction Coefficient - Fixed RH=80%
  SUSCACOEF     | m-1        | xyz  | C    | size(self%wavelengths_profile) | SO4 Scattering Coefficient
+ SUSCACOEFRH20 | m-1        | xyz  | C    | size(self%wavelengths_profile) | SO4 Scattering Coefficient - Fixed RH=20%
+ SUSCACOEFRH80 | m-1        | xyz  | C    | size(self%wavelengths_profile) | SO4 Scattering Coefficient - Fixed RH=80%
  SUANGSTR      | 1          | xy   | N    |                                | SO4 Angstrom parameter [470-870 nm]
  SUFLUXU       | kg m-1 s-1 | xy   | N    |                                | SO4 column u-wind mass flux
  SUFLUXV       | kg m-1 s-1 | xy   | N    |                                | SO4 column v-wind mass flux
