--- a/Process_Library/CMakeLists.txt
+++ b/Process_Library/CMakeLists.txt
@@ -9,6 +9,8 @@ esma_add_library(${this}
   SRCS ${srcs} 
   DEPENDENCIES esmf NetCDF::NetCDF_Fortran
   )
-if (OMP)
-  target_link_libraries(${this} PRIVATE OpenMP::OpenMP_Fortran)
-endif()
+
+# CMake has an OpenMP issue with NAG Fortran: https://gitlab.kitware.com/cmake/cmake/-/issues/21280
+if (NOT CMAKE_Fortran_COMPILER_ID MATCHES "NAG")
+   target_link_libraries(${this} PRIVATE OpenMP::OpenMP_Fortran)
+endif ()
