Lots of diag/testing code added. Can be removed.
Added lots of diagnostic and testing code and
connectivity for directly passing G2G aerosol
tendencies to GCC. This can all be removed when
desired.

-- MSL

--- a/ESMF/GOCART2G_GridComp/CA2G_GridComp/CA2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/CA2G_GridComp/CA2G_StateSpecs.rc
@@ -109,8 +109,10 @@ category: INTERNAL
 #----------------------------------------------------------------------------------------
   NAME    | UNITS | DIMS | VLOC | RESTART | ADD2EXPORT | FRIENDLYTO | LONG NAME
 #----------------------------------------------------------------------------------------
- CAphobic* |kg kg-1| xyz  | C    | MAPL_RestartOptional | T | DYNAMICS:TURBULENCE:MOIST:GEOSCHEMCHEM | Carbonaceous Aerosol Mixing Ratio
- CAphilic* |kg kg-1| xyz  | C    | MAPL_RestartOptional | T | DYNAMICS:TURBULENCE:MOIST:GEOSCHEMCHEM | Carbonaceous Aerosol Mixing Ratio
+ CAphobic* |kg kg-1| xyz  | C    | MAPL_RestartOptional | T | DYNAMICS:TURBULENCE:MOIST | Carbonaceous Aerosol Mixing Ratio
+ CAphilic* |kg kg-1| xyz  | C    | MAPL_RestartOptional | T | DYNAMICS:TURBULENCE:MOIST | Carbonaceous Aerosol Mixing Ratio
+# CAphobic* |kg kg-1| xyz  | C    | MAPL_RestartOptional | T | DYNAMICS:TURBULENCE:MOIST:GEOSCHEMCHEM | Carbonaceous Aerosol Mixing Ratio
+# CAphilic* |kg kg-1| xyz  | C    | MAPL_RestartOptional | T | DYNAMICS:TURBULENCE:MOIST:GEOSCHEMCHEM | Carbonaceous Aerosol Mixing Ratio
 
 #********************************************************
 #
